---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2021-08-14
  Features:
    - Revisions to all color masks for all entities, items, and icons are ongoing
    - Perceived brightness and contrast have been improved and oversaturation and color blowouts have been reduced for revised entities
    - Added progression tier adjustments when used with Sea Block for the chemical plants
    - Added numeral icons to the mud washing process recipes
  Changes:
    - Added backwards compatibility for older versions of Angel's Petrochem and Angel's Bioprocessing for progression tiering for electric boilers, chemical plants and algae farms
    - Revised icons for bronze, brass and gunmetal plates to improve visual separation
---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: 2021-07-01
  Features:
    - Implemented support for Bob's modules style agriculture modules and related technologies
    - Added progression tier adjustments when used with Sea Block for the algae farm 3, crystallizer, and filtration unit
    - Added support for Sea Block's 5th tier ore sorting facility
    - Added thorium power technology icon with Angel's Industries
    - When Angel's Industries and Bob's Power are present, startup setting "Deuterium is Blue!" is set `true` to align reactor colors with the deuterium fuel color
  Changes:
    - Adjusted progression tiering for electric boilers, chemical plants and oil & gas separators in line with changes from Angel's Petrochem
    - Dropped support for ShinyBobGFX, ShinyAngelGFX
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2021-06-02
  Bugfixes: