@@ -2,6 +2,7 @@
 Version: 2.0.1
 Date: ????
   Changes:
+    - Revised Algae farm progression tiering when Sea Block 0.5.5 or later is enabled
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.0
 Date: 2021-08-14
